<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="30dp">

    <LinearLayout
        android:id="@+id/settingButtonsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:paddingTop="20dp"
        android:weightSum="100">

        <Button
            android:id="@+id/createClientButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_client" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/settingButtonsLL">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="15dp"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="67"
                    android:padding="15dp"
                    android:text="@string/name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal|left"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="15dp"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="67"
                    android:padding="15dp"
                    android:text="Phone Number"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal|left"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="15dp"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="67"
                    android:padding="15dp"
                    android:text="@string/email"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal|left"
                    android:inputType="textEmailAddress"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="15dp"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="67"
                    android:padding="15dp"
                    android:text="@string/address"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal|left"
                    android:hint="@string/address"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="15dp"
                android:weightSum="100">

                <TextView
                    android:id="@+id/policyFiller"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editCity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="28"
                    android:hint="@string/city"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/spinnerState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="18" />

                <EditText
                    android:id="@+id/editZip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:hint="99999"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="15dp"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="67"
                    android:padding="15dp"
                    android:text="@string/username"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal|left"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="15dp"
                android:weightSum="100">

                <TextView
                    android:id="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="67"
                    android:padding="15dp"
                    android:text="@string/password"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:gravity="center_horizontal|left"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:text=""
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
